--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
   festival.db:
     image: mysql:latest
     env_file: ./festivaldb.env
-    #volumes:
-    #  - ./data/:/var/lib/mysql
+    volumes:
+      - ./data/:/var/lib/mysql
     ports:
       - "22002:3306"
     networks:
